--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "js-sha256": "^0.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "near-api-js": "^5.0.0",
+    "near-api-js": "^5.0.1",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
